# xiniu-crawler-planning

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  skill-install.sh
docs/: architecture.md  cleanup-log.md  codegen-brief.md  codegen-pipeline.md  domain-gov-policy-layout.md  domains-overview.md  gov-policy-layout.md  index.md  infra-overview.md  product-sense.md
docs/eval-test/: codegen-autocommit-20260429.md  codegen-closure-20260429.md  codegen-csrc-20260429.md  codegen-fallback-prompt-20260429.md  codegen-feedback-loop-20260429.md  codegen-json-contract-20260429.md  codegen-most-20260428.md  codegen-ndrc-20260429.md  codegen-nfra-20260429.md  codegen-red-eval-20260429.md  codegen-sasac-20260429.md  codegen-task-runner-20260429.md  default-rps-20260429.md  domain-source-layout-20260429.md  golden-fixture-layout-20260429.md  mvp-ndrc-collection-20260428.md  prd-task-ingest-20260429.md  probe-capability-20260429.md  render-codegen-platform-20260429.md  task-generation-table-20260429.md  template.md  webui-bootstrap-20260428.md  webui-list-polish-20260429.md  webui-storage-child-link-align-20260429.md
docs/exec-plan/: deferred-plan.md  index.md  tech-debt-tracker.md  template.md
docs/experiment/: template.md
docs/prd/: index.md
docs/prod-spec/: README.md  (+17 more)
infra/: README.md
intro/: xiniu-crawler-introduction.html
scripts/: audit_crawl_quality.py  ingest_prd_tasks.py  probe_source.py  run_codegen.py  run_codegen_for_adapter.py  run_crawl_task.py  run_webui.py  view_crawl.py
tests/: conftest.py
webui/: __init__.py  app.py  config.py
(+312 files in other folders)
